--- a/development/backend/database/index.mdx
+++ b/development/backend/database/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Database Management
 description: Multi-database support with SQLite and Turso using environment-based configuration and Drizzle ORM for DeployStack Backend development.
+sidebarTitle: Overview
 ---
 
 # Database Management
@@ -21,8 +22,8 @@ The backend uses an environment-based configuration system where database creden
 > **Setup Instructions**: For step-by-step setup instructions, see the [Database Setup Guide](/self-hosted/database-setup).
 
 > **Database-Specific Guides**: For detailed technical information about specific databases, see:
-> - [SQLite Development Guide](/development/backend/database-sqlite)
-> - [Turso Development Guide](/development/backend/database-turso)
+> - [SQLite Development Guide](/development/backend/database/sqlite)
+> - [Turso Development Guide](/development/backend/database/turso)
 
 ### Environment Variables
 
