--- a/development/backend/database/sqlite.mdx
+++ b/development/backend/database/sqlite.mdx
@@ -1,6 +1,7 @@
 ---
 title: SQLite Database Development Guide
 description: Technical implementation details and best practices for SQLite integration in DeployStack Backend development.
+sidebarTitle: SQLite Database
 ---
 
 # SQLite Database Development Guide
