--- a/development/backend/database/turso.mdx
+++ b/development/backend/database/turso.mdx
@@ -1,6 +1,7 @@
 ---
 title: Turso Database Development
 description: Complete guide to using Turso distributed SQLite database with DeployStack Backend, including setup, configuration, and best practices.
+sidebarTitle: Turso Database
 ---
 
 # Turso Database Development
