--- a/development/backend/oauth-providers.mdx
+++ b/development/backend/oauth-providers.mdx
@@ -1,11 +1,12 @@
 ---
-title: OAuth Provider Implementation
-description: Developer guide for implementing third-party OAuth providers (GitHub, Google, etc.) for user authentication in DeployStack
+title: OAuth2 Provider Implementation
+description: Developer guide for implementing third-party OAuth2 providers (GitHub, Google, etc.) for user authentication in DeployStack
+sidebarTitle: OAuth2 Providers
 ---
 
-# OAuth Provider Implementation
+# OAuth2 Provider Implementation
 
-This document describes how to implement third-party OAuth providers for user authentication in DeployStack. The system currently supports GitHub OAuth as a reference implementation, but the architecture is designed to easily accommodate additional providers like Google, Microsoft, GitLab, and others.
+This document describes how to implement third-party OAuth2 providers for user authentication in DeployStack. The system currently supports GitHub OAuth2 as a reference implementation, but the architecture is designed to easily accommodate additional providers like Google, Microsoft, GitLab, and others.
 
 For general authentication architecture, see [Backend Authentication System](/development/backend/auth). For OAuth2 server implementation (API access), see [OAuth2 Server Implementation](/development/backend/oauth2-server).
 
