--- a/development/backend/oauth2-server.mdx
+++ b/development/backend/oauth2-server.mdx
@@ -1,6 +1,7 @@
 ---
 title: OAuth2 Server Implementation
 description: Developer guide for the OAuth2 authorization server that enables programmatic API access via Bearer tokens
+sidebarTitle: OAuth2 Server
 ---
 
 # OAuth2 Server Implementation
@@ -231,7 +232,7 @@ The OAuth2 server implements standard OAuth2 endpoints following RFC 6749 and RF
 
 - **Registration Endpoint** (`/api/oauth2/register`) - RFC 7591 compliant client registration
 
-For complete API specifications including request parameters, response schemas, and examples, see the [Backend API Documentation](/development/backend/api). The API documentation provides OpenAPI specifications for all OAuth2 endpoints.
+For complete API specifications including request parameters, response schemas, and examples, see the [Backend API Documentation](/development/backend/api/). The API documentation provides OpenAPI specifications for all OAuth2 endpoints.
 
 ## OAuth2 Scopes
 
@@ -553,5 +554,5 @@ The OAuth2 server supports MCP clients through dynamic registration:
 - [Backend Authentication System](/development/backend/auth) - Core authentication
 - [Satellite OAuth Authentication](/development/satellite/oauth-authentication) - MCP client authentication
 - [Security Policy](/development/backend/security) - Security details
-- [API Documentation](/development/backend/api) - API reference
+- [API Documentation](/development/backend/api/) - API reference
 - [OAuth Provider Implementation](/development/backend/oauth-providers) - Third-party OAuth login setup
