--- a/development/backend/test.mdx
+++ b/development/backend/test.mdx
@@ -1,6 +1,7 @@
 ---
 title: Backend End-to-End Testing
 description: Complete E2E testing setup with Jest, Supertest, and automated database cleanup for DeployStack Backend development.
+sidebarTitle: Backend E2E Testing
 ---
 
 # Backend End-to-End Testing
