--- a/development/frontend/global-settings.mdx
+++ b/development/frontend/global-settings.mdx
@@ -1,6 +1,7 @@
 ---
 title: Global Settings Frontend Integration
 description: Complete guide to the flexible global settings component system for creating custom setting interfaces with connection testing and validation.
+sidebarTitle: Global Settings
 ---
 
 # Global Settings Frontend Integration
@@ -506,7 +507,7 @@ function previousStep() {
 ## Integration with Existing Systems
 
 ### Design System
-Follow the established [UI Design System](/development/frontend/ui-design-system) patterns. Use shadcn-vue components and maintain consistency with the overall design.
+Follow the established [UI Design System](/development/frontend/ui/) patterns. Use shadcn-vue components and maintain consistency with the overall design.
 
 ### Internationalization
 Add i18n support following the [Internationalization Guide](/development/frontend/internationalization). Create dedicated translation files for your settings components.
