--- a/development/frontend/router-optimization.mdx
+++ b/development/frontend/router-optimization.mdx
@@ -1,6 +1,7 @@
 ---
 title: Router Optimization & Authentication Caching
 description: Complete guide to the router performance optimizations and smart authentication caching system implemented in DeployStack frontend.
+sidebarTitle: Router Optimization
 ---
 
 # Router Optimization & Authentication Caching
