--- a/development/frontend/storage.mdx
+++ b/development/frontend/storage.mdx
@@ -1,6 +1,7 @@
 ---
 title: Frontend Storage System
 description: Complete guide to using the enhanced event bus storage system for persistent data management in the DeployStack frontend.
+sidebarTitle: Storage System
 ---
 
 # Frontend Storage System
