--- a/development/frontend/ui/design-system-pagination.mdx
+++ b/development/frontend/ui/design-system-pagination.mdx
@@ -1,6 +1,7 @@
 ---
 title: Frontend Pagination Implementation Guide
 description: Developer guide for implementing pagination in DeployStack frontend using the PaginationControls component.
+sidebarTitle: Pagination Guide
 ---
 
 # Frontend Pagination Implementation Guide
