--- a/development/frontend/ui/index.mdx
+++ b/development/frontend/ui/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: UI Design System
 description: Comprehensive guide to UI components, styling patterns, and design standards for the DeployStack frontend.
+sidebarTitle: Overview
 ---
 
 # UI Design System
@@ -120,9 +121,9 @@ This hierarchy is a **design system requirement** and must be followed consisten
 
 ## Data Tables
 
-For data table implementation, see the dedicated [Table Design System](/development/frontend/ui-design-system-table) guide.
+For data table implementation, see the dedicated [Table Design System](/development/frontend/ui/-table) guide.
 
-For pagination implementation, see the [Pagination Implementation Guide](/development/frontend/ui-design-system-pagination).
+For pagination implementation, see the [Pagination Implementation Guide](/development/frontend/ui/-pagination).
 
 ## Badge Design Patterns
 
@@ -214,7 +215,7 @@ Use `AlertDialog` for forms in modals:
 ## Button Patterns
 
 ### Loading States
-Buttons now include built-in loading state functionality. For comprehensive loading button documentation, see the [Button Loading States Guide](/development/frontend/ui-design-button-loading).
+Buttons now include built-in loading state functionality. For comprehensive loading button documentation, see the [Button Loading States Guide](/development/frontend/ui/design-button-loading).
 
 ```html
 <!-- Button with loading state -->
