--- a/development/satellite/polling.mdx
+++ b/development/satellite/polling.mdx
@@ -3,7 +3,7 @@ title: Backend Polling Implementation
 description: Technical implementation of satellite-to-backend polling system for command orchestration and configuration management.
 ---
 
-import { Callout } from 'fumadocs-ui/components/callout';
+
 
 # Backend Polling Implementation
 
@@ -392,9 +392,9 @@ Polling generates predictable network patterns:
 - **Heartbeats**: Regular status reports every 30 seconds
 - **Command Results**: Small JSON responses after command execution
 
-<Callout type="info">
+<Info>
 **Implementation Status**: The polling system is fully implemented and operational. It successfully handles command orchestration, configuration synchronization, and status reporting through outbound-only HTTP communication with the backend.
-</Callout>
+</Info>
 
 ## Troubleshooting
 
