--- a/development/satellite/team-isolation.mdx
+++ b/development/satellite/team-isolation.mdx
@@ -3,7 +3,7 @@ title: Team Isolation Implementation
 description: Technical implementation of OAuth-based team separation in DeployStack Satellite for multi-tenant MCP server access control.
 ---
 
-import { Callout } from 'fumadocs-ui/components/callout';
+
 
 # Team Isolation Implementation
 
@@ -272,9 +272,9 @@ Team isolation maintains full MCP client compatibility:
 - **No Team Awareness**: Clients remain unaware of team concepts
 - **Standard MCP**: Full compliance with MCP protocol specification
 
-<Callout type="info">
+<Info>
 **Implementation Status**: Team isolation is fully implemented and operational. The system provides complete team separation while maintaining MCP client compatibility and leveraging existing OAuth 2.1 authentication infrastructure.
-</Callout>
+</Info>
 
 ## Related Documentation
 
