--- a/general/mcp-admin-schema-workflow.mdx
+++ b/general/mcp-admin-schema-workflow.mdx
@@ -1,6 +1,7 @@
 ---
 title: MCP Schema Creation Workflow for Global Administrators
 description: Learn how global administrators transform raw MCP configurations into DeployStack's secure three-tier schema system with lock/unlock controls.
+sidebarTitle: MCP Schema Creation Workflow
 ---
 
 # MCP Schema Creation Workflow for Global Administrators
