--- a/general/mcp-user-configuration.mdx
+++ b/general/mcp-user-configuration.mdx
@@ -1,6 +1,7 @@
 ---
 title: MCP User Configuration and Personal Settings
 description: Learn how individual users configure personal MCP settings, customize their workflow, and work within team-defined boundaries.
+sidebarTitle: MCP User Configuration
 ---
 
 # MCP User Configuration and Personal Settings
