--- a/general/quick-start.mdx
+++ b/general/quick-start.mdx
@@ -3,10 +3,6 @@ title: Quick Start
 description: Get started with DeployStack in minutes - create your free account, configure MCP servers, and connect instantly with just a URL.
 ---
 
-import { Callout } from 'fumadocs-ui/components/callout';
-import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
-import { Steps, Step } from 'fumadocs-ui/components/steps';
-
 # Quick Start
 
 Get started with DeployStack in minutes. This guide walks you through creating a free account, configuring your first MCP server, and connecting your development environment with zero installation.
@@ -28,9 +24,7 @@ By the end of this guide, you'll have:
 ## Step 1: Create Your Free Account
 
 <Steps>
-  <Step>
-    **Sign Up for DeployStack**
-    
+  <Step title="Sign Up for DeployStack">
     Visit [cloud.deploystack.io](https://cloud.deploystack.io) and create your free account:
     
     - Sign up with your email address or GitHub account
@@ -38,9 +32,7 @@ By the end of this guide, you'll have:
     - You'll automatically get your own default team
   </Step>
   
-  <Step>
-    **Explore Your Dashboard**
-    
+  <Step title="Explore Your Dashboard">
     Once logged in, you'll see preinstalled MCP servers in your dashboard.
     We have preinstalled popular MCP servers like Sequential Thinking. You can add more whenever you want to.
   </Step>
@@ -51,9 +43,7 @@ By the end of this guide, you'll have:
 DeployStack Satellite provides instant MCP access through managed infrastructure - no installation required.
 
 <Steps>
-  <Step>
-    **Create OAuth Client Credentials**
-    
+  <Step title="Create OAuth Client Credentials">
     In your DeployStack dashboard:
     
     1. Navigate to the **Satellite** section
@@ -72,9 +62,7 @@ DeployStack Satellite provides instant MCP access through managed infrastructure
 Now connect VS Code or Cursor to use your team's MCP servers via satellite.
 
 <Steps>
-  <Step>
-    **Configure VS Code MCP Settings**
-    
+  <Step title="Configure VS Code MCP Settings">
     Open your VS Code settings and configure MCP to use the DeployStack Satellite.
     
     **Location**: `.vscode/settings.json` or global VS Code settings
@@ -114,9 +102,7 @@ Now connect VS Code or Cursor to use your team's MCP servers via satellite.
     ```
   </Step>
   
-  <Step>
-    **Test MCP Connection**
-    
+  <Step title="Test MCP Connection">
     1. **Restart VS Code** to load the new MCP configuration
     2. **Open Claude or compatible MCP client**
     3. **Test a tool**: Try using one of your configured MCP servers
@@ -129,27 +115,21 @@ Now connect VS Code or Cursor to use your team's MCP servers via satellite.
 Now that everything is connected, explore what you can do:
 
 <Steps>
-  <Step>
-    **Test Available Tools**
-    
+  <Step title="Test Available Tools">
     In your VS Code MCP client:
     - All configured MCP tools are instantly available
     - No local processes or installations required
     - Tools automatically include your team's credentials
   </Step>
   
-  <Step>
-    **Monitor Usage**
-    
+  <Step title="Monitor Usage">
     View activity in your [DeployStack dashboard](https://cloud.deploystack.io):
     - Real-time MCP tool usage
     - Team activity and analytics
     - Satellite performance metrics
   </Step>
   
-  <Step>
-    **Manage Your Team**
-    
+  <Step title="Manage Your Team">
     Back in the [DeployStack dashboard](https://cloud.deploystack.io):
     - Add more MCP servers to your team
     - Manage credentials securely
