--- a/development/backend/index.mdx
+++ b/development/backend/index.mdx
@@ -1,10 +1,10 @@
 ---
 title: Backend Development
 description: Complete guide to developing and contributing to the DeployStack backend - a high-performance Node.js application built with Fastify, TypeScript, and extensible plugin architecture.
+sidebarTitle: Overview
 ---
 
-import { Card, Cards } from 'fumadocs-ui/components/card';
-import { Database, Shield, Plug, Settings, Mail, TestTube, Wrench, BookOpen, Terminal, ListTodo } from 'lucide-react';
+
 
 # DeployStack Backend Development
 
@@ -31,95 +31,95 @@ The development server starts at `http://localhost:3000` with API documentation 
 
 ## Development Guides
 
-<Cards>
+<CardGroup cols={3}>
   <Card 
-    icon={<BookOpen />} 
-    href="/deploystack/development/backend/api" 
+    icon="book-open" 
+    href="/development/backend/api/index" 
     title="API Documentation"
   >
     Learn how to generate OpenAPI specifications, use Swagger UI, and implement JSON Schema validation for automatic API documentation.
   </Card>
   
   <Card 
-    icon={<Database />} 
-    href="/deploystack/development/backend/database" 
+    icon="database" 
+    href="/development/backend/database/index" 
     title="Database Management"
   >
     SQLite and PostgreSQL setup, schema management, migrations, and Drizzle ORM best practices.
   </Card>
   
   <Card 
-    icon={<Plug />} 
-    href="/deploystack/development/backend/plugins" 
+    icon="plug" 
+    href="/development/backend/plugins" 
     title="Plugin System"
   >
     Create extensible plugins with isolated routes, database extensions, and security features for custom functionality.
   </Card>
   
   <Card 
-    icon={<Settings />} 
-    href="/deploystack/development/backend/global-settings" 
+    icon="settings" 
+    href="/development/backend/global-settings" 
     title="Global Settings"
   >
     Configuration management system with encrypted storage, role-based access, and plugin extensions.
   </Card>
   
   <Card 
-    icon={<Shield />} 
-    href="/deploystack/development/backend/security" 
+    icon="shield" 
+    href="/development/backend/security" 
     title="Security & Roles"
   >
     Authentication, authorization, role-based access control, and security best practices.
   </Card>
   
   <Card 
-    icon={<Mail />} 
-    href="/deploystack/development/backend/mail" 
+    icon="mail" 
+    href="/development/backend/mail" 
     title="Mail System"
   >
     Email service configuration, SMTP setup, template management, and transactional email sending.
   </Card>
   
   <Card 
-    icon={<TestTube />} 
-    href="/deploystack/development/backend/test" 
+    icon="test-tube" 
+    href="/development/backend/test" 
     title="Testing"
   >
     Testing strategies, examples, and best practices for backend development and API testing.
   </Card>
   
   <Card 
-    icon={<Wrench />} 
-    href="/deploystack/development/backend/roles" 
+    icon="wrench" 
+    href="/development/backend/roles" 
     title="Roles Management"
   >
     User roles, permissions system, and access control implementation details.
   </Card>
   
   <Card 
-    icon={<Terminal />} 
-    href="/deploystack/development/backend/satellite-communication" 
+    icon="terminal" 
+    href="/development/backend/satellite-communication" 
     title="Satellite Communication"
   >
     API endpoints for satellite registration, configuration management, and command orchestration with polling-based communication.
   </Card>
   
   <Card 
-    icon={<ListTodo />} 
-    href="/deploystack/development/backend/job-queue" 
+    icon="list-todo" 
+    href="/development/backend/job-queue" 
     title="Background Job Queue"
   >
     Database-backed job processing system with persistent storage, automatic retries, and rate limiting for long-running background tasks.
   </Card>
   
   <Card 
-    icon={<Terminal />} 
-    href="/deploystack/development/backend/satellite-events" 
+    icon="terminal" 
+    href="/development/backend/satellite/events" 
     title="Satellite Events"
   >
     Real-time event processing from satellites with convention-based handlers routing to business tables for operational visibility.
   </Card>
-</Cards>
+</CardGroup>
 
 ## Project Structure
 
