--- a/development/frontend/index.mdx
+++ b/development/frontend/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Frontend Development Guide
 description: Complete guide to developing and contributing to the DeployStack frontend application built with Vue 3, TypeScript, and Vite.
+sidebarTitle: Overview
 ---
 
 # DeployStack Frontend Development
@@ -67,15 +68,15 @@ The frontend follows a feature-based modular architecture with clear separation 
 
 For comprehensive component development guidelines, including Vue SFC best practices, component structure patterns, and implementation standards, see the [Frontend Architecture - Component Implementation Standards](/development/frontend/architecture#component-implementation-standards) section.
 
-For table-specific implementations, refer to the [Table Design System](/development/frontend/ui-design-system-table) guide.
+For table-specific implementations, refer to the [Table Design System](/development/frontend/ui/-table) guide.
 
 ## UI Components and Styling
 
-The frontend uses **TailwindCSS** for styling with **shadcn-vue** component library for consistent UI elements. For comprehensive styling guidelines, component patterns, and design standards, see the [UI Design System](/development/frontend/ui-design-system) documentation.
+The frontend uses **TailwindCSS** for styling with **shadcn-vue** component library for consistent UI elements. For comprehensive styling guidelines, component patterns, and design standards, see the [UI Design System](/development/frontend/ui/) documentation.
 
 ### ⚠️ **Mandatory Design Patterns**
 
-All structured information displays must follow the **[Structured Data Display Pattern](/development/frontend/ui-design-system-structured-data)**. This includes:
+All structured information displays must follow the **[Structured Data Display Pattern](/development/frontend/ui/-structured-data)**. This includes:
 - User profiles and settings
 - Form layouts 
 - Configuration displays
@@ -124,8 +125,8 @@ The frontend uses a service layer pattern with direct `fetch()` calls for API co
 Continue reading the detailed guides:
 
 - [Frontend Architecture](/development/frontend/architecture) - Application architecture, patterns, and development principles
-- [UI Design System](/development/frontend/ui-design-system) - Component patterns, styling guidelines, and design standards
-- **[Structured Data Display Pattern](/development/frontend/ui-design-system-structured-data)** - **Mandatory pattern** for consistent information display
+- [UI Design System](/development/frontend/ui/) - Component patterns, styling guidelines, and design standards
+- **[Structured Data Display Pattern](/development/frontend/ui/-structured-data)** - **Mandatory pattern** for consistent information display
 - [Environment Variables](/development/frontend/environment-variables) - Complete environment configuration guide
 - [Global Event Bus](/development/frontend/event-bus) - Cross-component communication system
 - [Internationalization (i18n)](/development/frontend/internationalization) - Multi-language support
