--- a/development/satellite/registration.mdx
+++ b/development/satellite/registration.mdx
@@ -3,7 +3,7 @@ title: Satellite Registration
 description: Complete guide to DeployStack Satellite registration process - environment variables, validation rules, upsert logic, and database integration.
 ---
 
-import { Callout } from 'fumadocs-ui/components/callout';
+
 
 # Satellite Registration
 
@@ -61,9 +61,9 @@ rm services/satellite/persistent_data/backend.key.json
 cat services/satellite/persistent_data/backend.key.json
 ```
 
-<Callout type="info">
+<Info>
 **Important**: The `persistent_data/` directory must be writable by the satellite process. In production deployments, ensure proper volume mounting and permissions.
-</Callout>
+</Info>
 
 ## Registration Overview
 
@@ -114,7 +114,7 @@ The registration system requires **valid JWT registration tokens** for security:
 - **Admin-Controlled**: Only administrators can generate registration tokens
 - **No Open Registration**: Satellites cannot register without proper authorization
 
-For detailed token management, see [Registration Token Authentication](/development/backend/api-security#registration-token-authentication).
+For detailed token management, see [Registration Token Authentication](/development/backend/api/security#registration-token-authentication).
 
 ## Environment Variables
 
@@ -446,6 +446,6 @@ open http://localhost:3001/documentation
 - 🚧 API key rotation and renewal
 - 🚧 Registration status monitoring and alerts
 
-<Callout type="info">
-The satellite registration system implements secure JWT-based pairing to prevent unauthorized satellite connections. Once registered with a valid token, satellites receive permanent API keys for ongoing communication. See [Backend API Security](/development/backend/api-security#registration-token-authentication) for complete token management details.
-</Callout>
+<Info>
+The satellite registration system implements secure JWT-based pairing to prevent unauthorized satellite connections. Once registered with a valid token, satellites receive permanent API keys for ongoing communication. See [Backend API Security](/development/backend/api/security#registration-token-authentication) for complete token management details.
+</Info>
