--- a/general/local-setup.mdx
+++ b/general/local-setup.mdx
@@ -3,99 +3,80 @@ title: Local Development Setup
 description: Set up DeployStack for local development with npm scripts and hot reloading.
 ---
 
-import { Callout } from 'fumadocs-ui/components/callout';
-import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
-import { Steps, Step } from 'fumadocs-ui/components/steps';
-
 # Local Development Setup
 
 This guide is for contributors and developers who want to run DeployStack locally for development purposes. If you want to deploy DeployStack for production use, see our [Self-Hosted Documentation](/self-hosted).
 
-<Callout type="info">
+<Info>
   For production deployments, use our [Docker Compose setup](/self-hosted/docker-compose) instead.
-</Callout>
+</Info>
 
 ## Prerequisites
 
-<Tabs items={['Linux/macOS', 'Windows (WSL)']}>
-  <Tab value="Linux/macOS">
-    Before you can install and use DeployStack locally, make sure you have the following installed:
-    
-    - **[Git](https://git-scm.com/book/en/v2/Getting-Started-Installing-Git)**: Version control system
-    - **[Node.js v18+](https://nodejs.org/en/download)**: JavaScript runtime (v18 or higher required)
-    - **[npm v8+](https://docs.npmjs.com/getting-started)**: Package manager (comes with Node.js)
-    - **[Docker](https://docs.docker.com/get-docker/)**: For running databases (optional but recommended)
-    
-    ### Verify Installation
-    
-    ```bash
-    # Check versions
-    git --version
-    node --version  # Should be v18 or higher
-    npm --version   # Should be v8 or higher
-    docker --version
-    ```
-  </Tab>
-  
-  <Tab value="Windows (WSL)">
-    For Windows development, we recommend using Windows Subsystem for Linux (WSL2):
-    
-    1. **Install WSL2**: Follow [Microsoft's WSL installation guide](https://docs.microsoft.com/en-us/windows/wsl/install)
-    2. **Install Ubuntu**: From Microsoft Store or command line
-    3. **Install development tools in WSL**:
-    
-    ```bash
-    # Update package list
-    sudo apt update
-    
-    # Install Git
-    sudo apt install git
-    
-    # Install Node.js v18 via NodeSource
-    curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
-    sudo apt-get install -y nodejs
-    
-    # Install Docker
-    curl -fsSL https://get.docker.com -o get-docker.sh
-    sudo sh get-docker.sh
-    sudo usermod -aG docker $USER
-    ```
-    
-    ### Verify Installation
-    
-    ```bash
-    # Check versions
-    git --version
-    node --version  # Should be v18 or higher
-    npm --version   # Should be v8 or higher
-    docker --version
-    ```
-    
-    <Callout type="warn">
-      After installing Docker, you may need to restart your WSL session or run `newgrp docker` to use Docker without sudo.
-    </Callout>
-  </Tab>
-</Tabs>
+<CodeGroup>
+```bash Linux/macOS
+# Before you can install and use DeployStack locally, make sure you have:
+# - Git: Version control system
+# - Node.js v18+: JavaScript runtime (v18 or higher required)
+# - npm v8+: Package manager (comes with Node.js)
+# - Docker: For running databases (optional but recommended)
+
+# Verify Installation
+git --version
+node --version  # Should be v18 or higher
+npm --version   # Should be v8 or higher
+docker --version
+```
+
+```bash Windows (WSL)
+# For Windows development, we recommend using WSL2
+# 1. Install WSL2: Follow Microsoft's WSL installation guide
+# 2. Install Ubuntu: From Microsoft Store or command line
+# 3. Install development tools in WSL:
+
+# Update package list
+sudo apt update
+
+# Install Git
+sudo apt install git
+
+# Install Node.js v18 via NodeSource
+curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
+sudo apt-get install -y nodejs
+
+# Install Docker
+curl -fsSL https://get.docker.com -o get-docker.sh
+sudo sh get-docker.sh
+sudo usermod -aG docker $USER
+
+# Verify Installation
+git --version
+node --version  # Should be v18 or higher
+npm --version   # Should be v8 or higher
+docker --version
+```
+</CodeGroup>
+
+<Warning>
+  **Windows (WSL) Users**: After installing Docker, you may need to restart your WSL session or run `newgrp docker` to use Docker without sudo.
+</Warning>
 
 ## Step 1: Clone the Repository
 
-<Tabs items={['SSH (Recommended)', 'HTTPS']}>
-  <Tab value="SSH (Recommended)">
-    If you haven't set up SSH keys, learn how [here](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/about-ssh).
-    
-    ```bash
-    git clone git@github.com:deploystackio/deploystack.git
-    cd deploystack
-    ```
-  </Tab>
-  
-  <Tab value="HTTPS">
-    ```bash
-    git clone https://github.com/deploystackio/deploystack.git
-    cd deploystack
-    ```
-  </Tab>
-</Tabs>
+<CodeGroup>
+```bash SSH (Recommended)
+# If you haven't set up SSH keys, learn how at:
+# https://docs.github.com/en/authentication/connecting-to-github-with-ssh/about-ssh
+
+git clone git@github.com:deploystackio/deploystack.git
+cd deploystack
+```
+
+```bash HTTPS
+git clone https://github.com/deploystackio/deploystack.git
+cd deploystack
+```
+</CodeGroup>
 
 ## Step 2: Install Dependencies
 
@@ -106,9 +87,9 @@ Install all project dependencies using npm workspaces:
 npm install
 ```
 
-<Callout type="info">
+<Info>
   DeployStack uses npm workspaces to manage dependencies across frontend and backend services. The root `npm install` will install dependencies for all services.
-</Callout>
+</Info>
 
 ## Step 3: Set Up Environment Variables
 
@@ -157,67 +138,52 @@ VITE_APP_TITLE=DeployStack (Dev)
 
 ### Generate Encryption Secret
 
-<Tabs items={['Linux/macOS', 'Windows']}>
-  <Tab value="Linux/macOS">
-    Generate a secure 32-character secret:
-    
-    ```bash
-    # Using OpenSSL (recommended)
-    openssl rand -hex 16
-    
-    # Alternative using Node.js
-    node -e "console.log(require('crypto').randomBytes(16).toString('hex'))"
-    ```
-  </Tab>
-  
-  <Tab value="Windows">
-    Generate a secure secret using PowerShell or Node.js:
-    
-    ```powershell
-    # Using PowerShell
-    -join ((1..32) | ForEach {'{0:X}' -f (Get-Random -Max 16)})
-    
-    # Using Node.js (if available)
-    node -e "console.log(require('crypto').randomBytes(16).toString('hex'))"
-    ```
-  </Tab>
-</Tabs>
+<CodeGroup>
+```bash Linux/macOS
+# Using OpenSSL (recommended)
+openssl rand -hex 16
+
+# Alternative using Node.js
+node -e "console.log(require('crypto').randomBytes(16).toString('hex'))"
+```
+
+```powershell Windows
+# Using PowerShell
+-join ((1..32) | ForEach {'{0:X}' -f (Get-Random -Max 16)})
+
+# Using Node.js (if available)
+node -e "console.log(require('crypto').randomBytes(16).toString('hex'))"
+```
+</CodeGroup>
 
 ## Step 4: Set Up Database (Optional)
 
 DeployStack uses SQLite by default for development, but you can optionally set up PostgreSQL:
 
-<Tabs items={['SQLite (Default)', 'PostgreSQL (Optional)']}>
-  <Tab value="SQLite (Default)">
-    No additional setup required. DeployStack will create a SQLite database automatically in `services/backend/persistent_data/`.
-    
-    The database file will be created on first run:
-    ```
-    services/backend/persistent_data/database/deploystack.db
-    ```
-  </Tab>
-  
-  <Tab value="PostgreSQL (Optional)">
-    If you prefer PostgreSQL for development:
-    
-    ```bash
-    # Start PostgreSQL with Docker
-    docker run -d \
-      --name deploystack-postgres \
-      -e POSTGRES_DB=deploystack \
-      -e POSTGRES_USER=deploystack \
-      -e POSTGRES_PASSWORD=deploystack \
-      -p 5432:5432 \
-      postgres:16
-    ```
-    
-    Update your `services/backend/.env`:
-    ```bash
-    # Add PostgreSQL configuration
-    DATABASE_URL=postgresql://deploystack:deploystack@localhost:5432/deploystack
-    ```
-  </Tab>
-</Tabs>
+<CodeGroup>
+```text SQLite (Default)
+No additional setup required. DeployStack will create a SQLite database automatically in services/backend/persistent_data/.
+
+The database file will be created on first run:
+services/backend/persistent_data/database/deploystack.db
+```
+
+```bash PostgreSQL (Optional)
+# If you prefer PostgreSQL for development:
+
+# Start PostgreSQL with Docker
+docker run -d \
+  --name deploystack-postgres \
+  -e POSTGRES_DB=deploystack \
+  -e POSTGRES_USER=deploystack \
+  -e POSTGRES_PASSWORD=deploystack \
+  -p 5432:5432 \
+  postgres:16
+
+# Update your services/backend/.env:
+DATABASE_URL=postgresql://deploystack:deploystack@localhost:5432/deploystack
+```
+</CodeGroup>
 
 ## Step 5: Running the Development Servers
 
@@ -239,30 +205,26 @@ npm run dev:frontend
 
 Run both services from a single terminal:
 
-<Tabs items={['Linux/macOS', 'Windows']}>
-  <Tab value="Linux/macOS">
-    ```bash
-    # Start backend in background
-    npm run dev:backend &
-    
-    # Start frontend
-    npm run dev:frontend
-    
-    # To stop background processes later:
-    # pkill -f "npm run dev:backend"
-    ```
-  </Tab>
-  
-  <Tab value="Windows">
-    ```powershell
-    # Start backend in new window
-    Start-Process powershell -ArgumentList "-NoExit", "-Command", "npm run dev:backend"
-    
-    # Start frontend in current window
-    npm run dev:frontend
-    ```
-  </Tab>
-</Tabs>
+<CodeGroup>
+```bash Linux/macOS
+# Start backend in background
+npm run dev:backend &
+
+# Start frontend
+npm run dev:frontend
+
+# To stop background processes later:
+# pkill -f "npm run dev:backend"
+```
+
+```powershell Windows
+# Start backend in new window
+Start-Process powershell -ArgumentList "-NoExit", "-Command", "npm run dev:backend"
+
+# Start frontend in current window
+npm run dev:frontend
+```
+</CodeGroup>
 
 ### Development URLs
 
@@ -275,9 +237,7 @@ Once both services are running:
 ## Step 6: Verify Installation
 
 <Steps>
-  <Step>
-    **Check Service Status**
-    
+  <Step title="Check Service Status">
     Verify both services are running:
     ```bash
     # Check if ports are listening
@@ -286,15 +246,11 @@ Once both services are running:
     ```
   </Step>
   
-  <Step>
-    **Access the Application**
-    
+  <Step title="Access the Application">
     Open [http://localhost:5173](http://localhost:5173) in your browser. You should see the DeployStack interface.
   </Step>
   
-  <Step>
-    **Create First User**
-    
+  <Step title="Create First User">
     Follow the on-screen setup wizard to create your first admin user and configure basic settings.
   </Step>
 </Steps>
@@ -386,21 +342,19 @@ nvm use 18
 
 #### Permission Errors
 
-<Tabs items={['Linux/macOS', 'Windows']}>
-  <Tab value="Linux/macOS">
-    ```bash
-    # Fix npm permissions
-    sudo chown -R $(whoami) ~/.npm
-    
-    # Fix project permissions
-    sudo chown -R $(whoami) .
-    ```
-  </Tab>
-  
-  <Tab value="Windows">
-    Run your terminal as Administrator or ensure you have write permissions to the project directory.
-  </Tab>
-</Tabs>
+<CodeGroup>
+```bash Linux/macOS
+# Fix npm permissions
+sudo chown -R $(whoami) ~/.npm
+
+# Fix project permissions
+sudo chown -R $(whoami) .
+```
+
+```text Windows
+Run your terminal as Administrator or ensure you have write permissions to the project directory.
+```
+</CodeGroup>
 
 #### Database Connection Issues
 
