--- a/general/mcp-team-installation.mdx
+++ b/general/mcp-team-installation.mdx
@@ -1,6 +1,7 @@
 ---
 title: MCP Team Installation and Configuration
 description: Learn how team administrators configure MCP server installations, manage shared team settings, and control user access through lock/unlock controls.
+sidebarTitle: MCP Team Installation
 ---
 
 # MCP Team Installation and Configuration
