--- a/self-hosted/index.mdx
+++ b/self-hosted/index.mdx
@@ -3,18 +3,15 @@ title: Self-Hosted DeployStack
 description: Deploy and manage DeployStack on your own infrastructure with complete control and customization.
 ---
 
-import { Card, Cards } from 'fumadocs-ui/components/card';
-import { Server, Settings, ArrowUp, Wrench } from 'lucide-react';
-
 # Self-Hosted DeployStack
 
 Run DeployStack on your own infrastructure for maximum control, security, and customization. Perfect for organizations that need to keep their MCP server deployments within their own environment.
 
 ## Deployment Options
 
-<Cards>
+<CardGroup cols={2}>
   <Card 
-    icon={<Server />} 
+    icon="server" 
     href="/self-hosted/docker-compose" 
     title="Docker Compose Setup"
   >
@@ -22,19 +19,19 @@ Run DeployStack on your own infrastructure for maximum control, security, and cu
   </Card>
   
   <Card 
-    icon={<Settings />} 
+    icon="settings" 
     href="/self-hosted/setup" 
     title="Advanced Setup"
   >
     Manual installation and configuration for custom environments
   </Card>
-</Cards>
+</CardGroup>
 
 ## Management & Maintenance
 
-<Cards>
+<CardGroup cols={2}>
   <Card 
-    icon={<ArrowUp />} 
+    icon="arrow-up" 
     href="/self-hosted/upgrade-guide" 
     title="Upgrade Guide"
   >
@@ -42,13 +39,13 @@ Run DeployStack on your own infrastructure for maximum control, security, and cu
   </Card>
   
   <Card 
-    icon={<Wrench />} 
+    icon="wrench" 
     href="/troubleshooting" 
     title="Troubleshooting"
   >
     Common issues and solutions for self-hosted deployments
   </Card>
-</Cards>
+</CardGroup>
 
 ## Why Self-Host DeployStack?
 
