--- a/self-hosted/quick-start.mdx
+++ b/self-hosted/quick-start.mdx
@@ -3,17 +3,13 @@ title: Quick Start
 description: Get DeployStack running in minutes with Docker Compose or individual Docker containers.
 ---
 
-import { Callout } from 'fumadocs-ui/components/callout';
-import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
-import { Steps, Step } from 'fumadocs-ui/components/steps';
-
 # Quick Start
 
 Get DeployStack up and running in minutes. This guide covers deploying the core platform (frontend + backend) and the required satellite service for MCP server management.
 
-<Callout type="warn">
-  **Important**: Satellites are required for DeployStack to function. The platform alone cannot manage MCP servers - you must deploy at least one satellite.
-</Callout>
+<Warning>
+**Important**: Satellites are required for DeployStack to function. The platform alone cannot manage MCP servers - you must deploy at least one satellite.
+</Warning>
 
 ## Prerequisites
 
@@ -26,9 +22,7 @@ Get DeployStack up and running in minutes. This guide covers deploying the core 
 The fastest way to get DeployStack running with proper networking and persistence.
 
 <Steps>
-  <Step>
-    **Download and Start**
-    
+  <Step title="Download and Start">
     Run these two commands to get DeployStack running:
     
     ```bash
@@ -37,17 +31,13 @@ The fastest way to get DeployStack running with proper networking and persistenc
     ```
   </Step>
   
-  <Step>
-    **Access DeployStack**
-    
+  <Step title="Access DeployStack">
     Open your browser and navigate to:
     - **DeployStack Interface**: [http://localhost:8080](http://localhost:8080)
     - **Backend API**: [http://localhost:3000](http://localhost:3000)
   </Step>
   
-  <Step>
-    **Complete Setup**
-    
+  <Step title="Complete Setup">
     Follow the on-screen setup wizard to:
     - Create your admin account
     - Configure basic settings
@@ -80,27 +70,23 @@ For more control over the deployment, run frontend and backend containers separa
 
 ### Step 1: Generate Encryption Secret
 
-<Tabs items={['Linux/macOS', 'Windows']}>
-  <Tab value="Linux/macOS">
-    ```bash
-    # Generate a secure secret
-    export DEPLOYSTACK_ENCRYPTION_SECRET=$(openssl rand -hex 16)
-    echo "Your encryption secret: $DEPLOYSTACK_ENCRYPTION_SECRET"
-    ```
-  </Tab>
-  
-  <Tab value="Windows">
-    ```powershell
-    # Generate a secure secret
-    $env:DEPLOYSTACK_ENCRYPTION_SECRET = -join ((1..32) | ForEach {'{0:X}' -f (Get-Random -Max 16)})
-    Write-Host "Your encryption secret: $env:DEPLOYSTACK_ENCRYPTION_SECRET"
-    ```
-  </Tab>
-</Tabs>
+<CodeGroup>
+```bash Linux/macOS
+# Generate a secure secret
+export DEPLOYSTACK_ENCRYPTION_SECRET=$(openssl rand -hex 16)
+echo "Your encryption secret: $DEPLOYSTACK_ENCRYPTION_SECRET"
+```
 
-<Callout type="warn">
-  **Save this secret!** You'll need it for upgrades and configuration changes.
-</Callout>
+```powershell Windows
+# Generate a secure secret
+$env:DEPLOYSTACK_ENCRYPTION_SECRET = -join ((1..32) | ForEach {'{0:X}' -f (Get-Random -Max 16)})
+Write-Host "Your encryption secret: $env:DEPLOYSTACK_ENCRYPTION_SECRET"
+```
+</CodeGroup>
+
+<Warning>
+**Save this secret!** You'll need it for upgrades and configuration changes.
+</Warning>
 
 ### Step 2: Start Backend Service
 
@@ -147,46 +133,33 @@ For production deployments on a server or VPS:
 
 Replace `localhost` with your server's IP address or domain:
 
-<Tabs items={['Docker Compose', 'Individual Containers']}>
-  <Tab value="Docker Compose">
-    Create a `.env` file:
-    
-    ```bash
-    # .env file
-    DEPLOYSTACK_ENCRYPTION_SECRET=your-generated-secret-here
-    DEPLOYSTACK_FRONTEND_URL=http://YOUR_SERVER_IP:8080
-    VITE_DEPLOYSTACK_BACKEND_URL=http://YOUR_SERVER_IP:3000
-    ```
-    
-    Then start with:
-    ```bash
-    docker-compose up -d
-    ```
-  </Tab>
-  
-  <Tab value="Individual Containers">
-    Update the Docker run commands:
-    
-    ```bash
-    # Backend
-    docker run -d \
-      --name deploystack-backend \
-      -p 3000:3000 \
-      -e DEPLOYSTACK_FRONTEND_URL="http://YOUR_SERVER_IP:8080" \
-      -e DEPLOYSTACK_ENCRYPTION_SECRET="your-secret-here" \
-      -v deploystack_backend_persistent:/app/persistent_data \
-      deploystack/backend:latest
-    
-    # Frontend
-    docker run -d \
-      --name deploystack-frontend \
-      -p 8080:80 \
-      -e VITE_DEPLOYSTACK_BACKEND_URL="http://YOUR_SERVER_IP:3000" \
-      -e VITE_APP_TITLE="DeployStack Production" \
-      deploystack/frontend:latest
-    ```
-  </Tab>
-</Tabs>
+<CodeGroup>
+```bash Docker Compose
+# .env file
+DEPLOYSTACK_ENCRYPTION_SECRET=your-generated-secret-here
+DEPLOYSTACK_FRONTEND_URL=http://YOUR_SERVER_IP:8080
+VITE_DEPLOYSTACK_BACKEND_URL=http://YOUR_SERVER_IP:3000
+```
+
+```bash Individual Containers
+# Backend
+docker run -d \
+  --name deploystack-backend \
+  -p 3000:3000 \
+  -e DEPLOYSTACK_FRONTEND_URL="http://YOUR_SERVER_IP:8080" \
+  -e DEPLOYSTACK_ENCRYPTION_SECRET="your-secret-here" \
+  -v deploystack_backend_persistent:/app/persistent_data \
+  deploystack/backend:latest
+
+# Frontend
+docker run -d \
+  --name deploystack-frontend \
+  -p 8080:80 \
+  -e VITE_DEPLOYSTACK_BACKEND_URL="http://YOUR_SERVER_IP:3000" \
+  -e VITE_APP_TITLE="DeployStack Production" \
+  deploystack/frontend:latest
+```
+</CodeGroup>
 
 ### Firewall Configuration
 
@@ -205,18 +178,16 @@ sudo firewall-cmd --reload
 
 ## Satellite Service
 
-<Callout type="warn">
-  **Satellites are required** - DeployStack cannot manage MCP servers without satellites. You must deploy at least one satellite for the platform to function.
-</Callout>
+<Warning>
+**Satellites are required** - DeployStack cannot manage MCP servers without satellites. You must deploy at least one satellite for the platform to function.
+</Warning>
 
 ### Adding a Satellite to Your Deployment
 
 After completing the basic backend and frontend setup, deploy at least one satellite:
 
 <Steps>
-  <Step>
-    **Generate Registration Token**
-    
+  <Step title="Generate Registration Token">
     After setting up your admin account, generate a registration token:
     
     1. Log in to your DeployStack instance as admin
@@ -226,9 +197,7 @@ After completing the basic backend and frontend setup, deploy at least one satel
     The token format will be: `deploystack_satellite_global_eyJhbGciOi...`
   </Step>
   
-  <Step>
-    **Start Satellite Service**
-    
+  <Step title="Start Satellite Service">
     ```bash
     docker run -d \
       --name deploystack-satellite \
@@ -240,17 +209,15 @@ After completing the basic backend and frontend setup, deploy at least one satel
       deploystack/satellite:latest
     ```
     
-    <Callout type="warn">
-      **Satellite Name Requirements:**
-      - 10-32 characters
-      - Only lowercase letters, numbers, hyphens, and underscores
-      - No spaces or special characters
-    </Callout>
+    <Warning>
+    **Satellite Name Requirements:**
+    - 10-32 characters
+    - Only lowercase letters, numbers, hyphens, and underscores
+    - No spaces or special characters
+    </Warning>
   </Step>
   
-  <Step>
-    **Verify Satellite Registration**
-    
+  <Step title="Verify Satellite Registration">
     Check the satellite logs to confirm successful registration:
     
     ```bash
@@ -304,34 +271,26 @@ The registration token is only required once during initial pairing.
 Once DeployStack is running with at least one satellite:
 
 <Steps>
-  <Step>
-    **Complete Initial Setup**
-    
+  <Step title="Complete Initial Setup">
     - Create your admin account
     - Configure global settings (email, authentication)
     - Set up user roles and permissions
   </Step>
   
-  <Step>
-    **Deploy Satellite Service**
-    
+  <Step title="Deploy Satellite Service">
     - Generate registration token from admin panel
     - Deploy satellite with the token
     - Verify satellite registration and activation
     - See [Satellite Service](#satellite-service) section above
   </Step>
   
-  <Step>
-    **Deploy Your First MCP Server**
-    
+  <Step title="Deploy Your First MCP Server">
     - Browse the MCP server catalog
     - Configure credentials and settings
     - Deploy to your satellite
   </Step>
   
-  <Step>
-    **Explore Advanced Features**
-    
+  <Step title="Explore Advanced Features">
     - Set up team collaboration
     - Create private MCP server catalogs
     - Configure CI/CD integrations
